@@ -9,21 +9,35 @@ POE::Quickie - A lazy way to wrap blocking code and programs
  use POE::Quickie;
 
  sub event_handler {
-     # the really lazy interface
+     # the really lazy interface, which will block
      my ($stdout, $stderr, $exit_status) = quickie('foo.pl');
      print $stdout;
 
      # the more involved interface
-     my $pid = POE::Quickie->run(
+     quickie_run(
          Program     => ['foo.pl', 'bar'],
          StdoutEvent => 'stdout',
          Context     => 'remember this',
      );
+
+     # a combination of the two approaches
+     quickie_run(
+         Program     => ['foo.pl', 'bar'],
+         Context     => 'remember this',
+         ResultEvent => 'result',
+     );
  }
 
+ # this will get called once for every output line
  sub stdout {
      my ($output, $context) = @_[ARG0, ARG1];
      print "got output: '$output' in the context of '$context'\n";
+ }
+
+ # only called when the task is finished
+ sub result {
+     my ($pid, $stdout, $stderr, $merged, $status, $context) = @_[ARG0..$#_];
+     print "got all this output in the context of '$context': '$output'\n";
  }
 
 =head1 DESCRIPTION
@@ -90,6 +104,9 @@ process' STDERR. To explicitly ignore them, set this to C<undef>.
 B<'ExitEvent'> (optional), the event to be called when the process has exited.
 If you don't supply this, a warning indicating the exit code will be printed
 if it is nonzero. To explicitly ignore it, set this to C<undef>.
+
+B<'ResultEvent'> (optional), like 'ExitEvent', but it will also contain all
+the stdout/stderr generated by the child process.
 
 B<'Context'> (optional), a variable which will be sent back to you with every
 event. If you pass a reference, that same reference will be delivered back
@@ -159,11 +176,35 @@ to the options to L<C<run>|/run>.
 
 =item C<ARG2>: the context variable, if any
 
+=head2 ResultEvent
+
+=over 4
+
+=item C<ARG0>: the process id of the child process
+
+=item C<ARG1>: all the stdout generated by the child process
+
+=item C<ARG2>: all the stderr generated by the child process
+
+=item C<ARG3>: merged stdout/stderr generated by the child process
+
+=item C<ARG4>: the exit code (L<C<$?>|perlvar>) of the child process
+
+=item C<ARG5>: the context variable, if any
+
+=back
+
 =back
 
 =head1 FUNCTIONS
 
-The usage of these functions is modeled after the ones provided by
+=head2 C<quickie_run>
+
+Equivalent to C<< POE::Quickie->run() >>, provided as a convenience.
+
+=head2 Blocking functions
+
+The following functions are modeled after the ones provided by
 L<Capture::Tiny|Capture::Tiny>. They will not return until the executed
 process has exited. However,
 L<C<run_one_timeslice>|POE::Kernel/run_one_timeslice> in POE::Kernel will be
@@ -177,24 +218,24 @@ event handlers which were executed with C<< $poe_kernel->call() >> by other
 sessions, so you don't hold them up. A simple way to avoid that is to
 C<yield()> or C<post()> a new event to your session and do it from there.
 
-=head2 C<quickie>
+=head3 C<quickie>
 
 Returns 3 values: the stdout, stderr, and exit code (L<C<$?>|perlvar>) of the
 child process.
 
-=head2 C<quickie_tee>
+=head3 C<quickie_tee>
 
 Returns 3 values: the stdout, stderr, and exit code (L<C<$?>|perlvar>) of the
 child process. In addition, it will echo the stdout/stderr to your process'
 stdout/stderr. Beware that stdout and stderr in the merged result are not
 guaranteed to be properly ordered due to buffering.
 
-=head2 C<quickie_merged>
+=head3 C<quickie_merged>
 
 Returns 2 values: the merged stdout & stderr, and exit code (L<C<$?>|perlvar>)
 of the child process.
 
-=head2 C<quickie_tee_merged>
+=head3 C<quickie_tee_merged>
 
 Returns 2 values: the merged stdout & stderr, and exit code (L<C<$?>|perlvar>)
 of the child process. In addition, it will echo the merged stdout & stderr to
